Cleaned up the code and added SignUp.jsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#b6bfda",
-    "activityBar.background": "#b6bfda",
+    "activityBar.activeBackground": "#9980e5",
+    "activityBar.background": "#9980e5",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#b46b7d",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#b6bfda",
-    "statusBar.background": "#94a2c9",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#7285b8",
-    "statusBarItem.remoteBackground": "#94a2c9",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#94a2c9",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#94a2c999",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBarBadge.background": "#9f4021",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#9980e5",
+    "statusBar.background": "#7755dd",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#9980e5",
+    "statusBarItem.remoteBackground": "#7755dd",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#7755dd",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#7755dd99",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#94a2c9",
+  "peacock.color": "#7755dd",
   "cSpell.words": [
     "appspot",
     "firebaseapp",
