--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,32 @@
 {
-  "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#9980e5",
-    "activityBar.background": "#9980e5",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#9f4021",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#9980e5",
-    "statusBar.background": "#7755dd",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#9980e5",
-    "statusBarItem.remoteBackground": "#7755dd",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#7755dd",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#7755dd99",
-    "titleBar.inactiveForeground": "#e7e7e799"
-  },
-  "peacock.color": "#7755dd",
-  "cSpell.words": [
-    "appspot",
-    "firebaseapp",
-    "noopener",
-    "signup",
-    "Umzxcu",
-    "Wozr",
-    "XLVXR"
-  ]
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#9980e5",
+        "activityBar.background": "#9980e5",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#9f4021",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#9980e5",
+        "statusBar.background": "#7755dd",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#9980e5",
+        "statusBarItem.remoteBackground": "#7755dd",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#7755dd",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#7755dd99",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#7755dd",
+    "cSpell.words": [
+        "appspot",
+        "firebaseapp",
+        "linea",
+        "noopener",
+        "signup",
+        "Umzxcu",
+        "Wozr",
+        "XLVXR"
+    ]
 }
