backtracked and integrated authcontext.js, continuing on with navbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "cSpell.words": [
         "appspot",
         "firebaseapp",
+        "Firestore",
         "linea",
         "noopener",
         "signup",
