--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#7755dd",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#7755dd99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "activityBar.activeBorder": "#9f4021"
     },
     "peacock.color": "#7755dd",
     "cSpell.words": [
