--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.7.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.1",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^5.2.1",
     "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
