flow between member and coordinator are working properly now, moving on to creating events and coordinator/volunteer flow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,10 +22,12 @@
     "peacock.color": "#7755dd",
     "cSpell.words": [
         "appspot",
+        "cooldown",
         "firebaseapp",
         "Firestore",
         "linea",
         "noopener",
+        "notif",
         "signup",
         "Umzxcu",
         "Wozr",
