--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "firebaseapp",
         "Firestore",
         "linea",
+        "Millis",
         "noopener",
         "notif",
         "signup",
