--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,4 @@
 {
-    "database": {
-        "rules": "database.rules.json"
-    },
-    "firestore": {
-        "rules": "firestore.rules",
-        "indexes": "firestore.indexes.json"
-    },
     "hosting": {
         "public": "build",
         "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
@@ -13,6 +6,17 @@
             {
                 "source": "**",
                 "destination": "/index.html"
+            }
+        ],
+        "headers": [
+            {
+                "source": "/**",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache, no-store, must-revalidate"
+                    }
+                ]
             }
         ]
     }
