minor tweaks, comments added for files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "cSpell.words": [
         "appspot",
         "cooldown",
+        "fileoverview",
         "firebaseapp",
         "Firestore",
         "linea",
@@ -30,6 +31,7 @@
         "noopener",
         "notif",
         "signup",
+        "typicons",
         "Umzxcu",
         "Wozr",
         "XLVXR"
