--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "cSpell.words": [
         "appspot",
         "cooldown",
+        "CSUF",
         "fileoverview",
         "firebaseapp",
         "Firestore",
@@ -33,6 +34,7 @@
         "signup",
         "typicons",
         "Umzxcu",
+        "unsignup",
         "Wozr",
         "XLVXR"
     ]
