--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 .env.production.local
 firebase.config.js
 .env
-./pages/NotificationTestPage.js
+src/pages/NotificationTestPage.js
 
 npm-debug.log*
 yarn-debug.log*
